--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/basket_product_image"
+        android:id="@+id/productImageView"
         android:layout_width="72dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
@@ -17,7 +17,7 @@
         tools:src="@drawable/ic_launcher_background" />
 
     <TextView
-        android:id="@+id/basket_product_name"
+        android:id="@+id/productName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -25,12 +25,12 @@
         android:textColor="#444"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/basket_product_image"
-        app:layout_constraintTop_toTopOf="@+id/basket_product_image"
+        app:layout_constraintStart_toEndOf="@+id/productImageView"
+        app:layout_constraintTop_toTopOf="@+id/productImageView"
         tools:text="Product Name" />
 
     <TextView
-        android:id="@+id/product_description"
+        android:id="@+id/productDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -39,11 +39,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/basket_product_image"
+        app:layout_constraintTop_toBottomOf="@+id/productImageView"
         tools:text="Product Description" />
 
     <Button
-        android:id="@+id/add_to_basket_button"
+        android:id="@+id/addToBasketButton"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -55,19 +55,19 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/already_in_basket_message"
+        android:id="@+id/alreadyInBasketMessageView"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
-        android:textStyle="bold"
         android:text="@string/product_in_basket"
         android:textColor="#A3331A"
+        android:textStyle="bold"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/product_description" />
+        app:layout_constraintTop_toBottomOf="@+id/productDescription" />
 
 </android.support.constraint.ConstraintLayout>
 
