--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -14,7 +14,7 @@
         tools:listitem="@layout/view_product_item" />
 
     <ProgressBar
-        android:id="@+id/progress"
+        android:id="@+id/progressView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
