--- a/app/src/main/res/layout/view_basket_product_item.xml
+++ b/app/src/main/res/layout/view_basket_product_item.xml
@@ -8,7 +8,7 @@
     android:background="?selectableItemBackground">
 
     <ImageView
-        android:id="@+id/basket_product_image"
+        android:id="@+id/basketProductImage"
         android:layout_width="64dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
@@ -21,7 +21,7 @@
         tools:src="@mipmap/ic_launcher_round" />
 
     <TextView
-        android:id="@+id/basket_product_name"
+        android:id="@+id/basketProductName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -29,13 +29,13 @@
         android:textColor="#444"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/basket_product_image"
-        app:layout_constraintTop_toTopOf="@+id/basket_product_image"
+        app:layout_constraintStart_toEndOf="@+id/basketProductImage"
+        app:layout_constraintTop_toTopOf="@+id/basketProductImage"
         tools:text="product description" />
 
 
     <TextView
-        android:id="@+id/delete_button"
+        android:id="@+id/deleteButton"
         android:layout_width="64dp"
         android:layout_height="30dp"
         android:layout_marginEnd="16dp"
@@ -57,6 +57,6 @@
         android:background="#BBB"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/basket_product_image" />
+        app:layout_constraintStart_toEndOf="@+id/basketProductImage" />
 
 </android.support.constraint.ConstraintLayout>
